--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
 
 <div class="main-content">
-<p><img src="http://i63.tinypic.com/2eznrso.png" alt="Zincir"/></p>
+<h1>Zincir </h1>
 
 <p>Simple distributed blockchain experiment written in <a href="https://crystal-lang.org" target="_blank">Crystal</a></p>
 
