--- a/index.html
+++ b/index.html
@@ -153,42 +153,67 @@
 
 
 <div class="main-content">
-<h1>Zincir </h1>
+<h1>Zincir</h1>
 
 <p>Simple distributed blockchain experiment written in <a href="https://crystal-lang.org" target="_blank">Crystal</a></p>
 
+<ul><li><a href="http://docs.zincir.xyz" target="_blank">Documents</a></li><li><a href="https://github.com/oguzbilgic/zincir-crystal/releases" target="_blank">Releases</a></li><li><a href="http://explorer.zincir.xyz" target="_blank">Network Explorer</a></li></ul>
+
 <h2>Usage</h2>
 
-<h3>Install shards</h3>
+<h3>Build</h3>
 
-<pre><code class="language-bash">$ shards install
-$ shards build
+<p>To build zincir, you will need <a href="https://crystal-lang.org/" target="_blank">Crystal</a> and
+<a href="https://www.openssl.org/" target="_blank">OpenSSL</a> installed on your system. You can use
+<a href="https://brew.sh/" target="_blank">Homebrew</a> on Mac to install these dependencies.</p>
+
+<pre><code class="language-bash">> git clone git@github.com:oguzbilgic/zincir-crystal.git
+  ...
+> shards install
+  ...
+> shards build --release
   Dependencies are satisfied
-  Building: zincir
-  Building: zincird
-$ ./bin/zincird --help
+  Building: zincird</code></pre>
+
+<h3>Options</h3>
+
+<pre><code class="language-shell">> ./bin/zincird --help
   Usage: zincir [arguments]
-      -s IP, --seed-ip=IP              Specify ip for the seed node
-      -i IP, --host-ip=IP              Specify ip for the host node
-      -p PORT, --port=PORT             Start public server for other nodes to connect
-      -l, --local-net                  Prevents initial seed node connections
-      -w, --web                        Enable web server
+      -s IP, --seed-ip=IP              First node to connect, TestNet by default
+      -i IP, --host-ip=IP              Node's public ip, If the node is public
+      -p PORT, --port=PORT             Node's public port, If the node is public
+      -l, --local-net                  Prevents node from connecting to public nodes
+      -w, --web                        Start web server without making the node public
       -m, --mine                       Enable mining
       -h, --help                       Show this help
-      -v, --version                    Show version</code></pre>
+      -v, --version                    Show node version</code></pre>
 
-<h3>Start a private node</h3>
+<h3>Start</h3>
 
-<pre><code class="language-bash">$ ./bin/zincird --mine
+<pre><code class="language-bash">> ./bin/zincird --mine
   Connecting to testnet.zincir.xyz:9147
   Added &lt;1-0878bff02..ec7> 1544946023
   ...</code></pre>
 
+<p>Node will connect to <code>TestNet</code> by default and sync the blockchain, before mining.
+Blockchain will be cached in <code>./blocks/</code> folder.</p>
+
 <h3>Start a public node</h3>
 
-<pre><code class="language-bash">$ ./bin/zincird --ip mynode.mywebsite.com --port 1234 --mine
+<pre><code class="language-bash">> ./bin/zincird --ip mynode.mywebsite.com --port 1234 --mine
   Connecting to testnet.zincir.xyz:9147
   Added &lt;1-0878bff02..ec7> 1544946023
+  ...</code></pre>
+
+<p>In public mode, node will advertise it's ip and host to the network for other
+nodes to connect. Therefore, node needs to be publicly accessible with the
+provided ip and port configuration</p>
+
+<h2>Development</h2>
+
+<h3>Run tests</h3>
+
+<pre><code class="language-bash">$ crystal spec
   ...</code></pre>
 </div>
 </body>
